plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

loom {
	accessWidenerPath = file("src/main/resources/mcgltf.accesswidener")
}

def lwjglModules = ["lwjgl-meshoptimizer"]
def lwjglNatives = ["natives-windows", "natives-windows-arm64", "natives-windows-x86",
                    "natives-linux", "natives-macos", "natives-macos-arm64"]

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	compileOnly files("libs/iris.jar")
	compileOnly files("libs/modmenu.jar")

	include(implementation("com.jsoniter:jsoniter:${project.jsoniter_version}"))

	lwjglModules.each { m ->
		include(implementation("org.lwjgl:${m}:${project.lwjgl_version}"))
		lwjglNatives.each { n ->
			include(runtimeOnly("org.lwjgl:${m}:${project.lwjgl_version}:${n}"))
		}
	}
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}
}
